tests/snapshots/s2_stamps_drill__drill_view_empty_batch.snap
---
source: tests/s2_stamps_drill.rs
expression: view
---
StampDrillView {
    depth: 22,
    bucket_depth: 16,
    upper_bound: 64,
    total_chunks: 0,
    theoretical_capacity: 4194304,
    fill_distribution: [
        16,
        0,
        0,
        0,
        0,
        0,
    ],
    worst_buckets: [
        WorstBucket {
            bucket_id: 0,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 1,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 2,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 3,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 4,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 5,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 6,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 7,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 8,
            collisions: 0,
            pct: 0,
        },
        WorstBucket {
            bucket_id: 9,
            collisions: 0,
            pct: 0,
        },
    ],
    worst_pct: 0,
}
